Fix cta section spacing and title styles

--- a/src/styles/sections/ctas.scss
+++ b/src/styles/sections/ctas.scss
@@ -6,8 +6,8 @@
 |
 */
 .sec-Ctas {
-  padding-top: 120px;
-  padding-bottom: 100px;
+  margin-top: 120px;
+  margin-bottom: 120px;
 }
 
 .sec-Ctas_Inner {
@@ -97,6 +97,8 @@
 
 .sec-Ctas_Title {
   font-size: 32px;
-  font-weight: 400;
+  font-weight: 300;
   line-height: 40px;
+
+  color: $color-brand;
 }
